# hathor-playground

./: .env.example  .envrc  .gitignore  CLIENT_SIDE_ARCHITECTURE.md  DEPLOYMENT.md  FINAL_IMPLEMENTATION_STATUS.md  FRONTEND.md  IDE_REVIEW_AND_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  Justfile  SETUP.md  UNIFIED_AGENT.md  UNIFIED_ARCHITECTURE.md  architecture_summary.md  deploy.sh  docker-compose.yml  dump.rdb  flake.nix  mkdocs.yml  nginx.conf
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  RATE_LIMITING.md  __init__.py  main.py  pyproject.toml  requirements.txt  test_generate.py  test_rate_limit.py
backend/api/: ai_assistant.py  ai_tools.py  beam.py  beam_service.py  cache_manager.py  environment_detector.py  frontend_prompt.py  unified_chat.py  unified_chat_stream.py  unified_tools.py
backend/middleware/: __init__.py  rate_limit.py
backend/tests/: test_main.py
docs/: architecture.md  contributing.md  frontend.md  getting-started.md  index.md  prompts.md
frontend/: .dockerignore  .env.example  .gitignore  BRAINTRUST_SETUP.md  CREATE_HATHOR_DAPP.md  Dockerfile  Dockerfile.production  IMPROVEMENTS_SUMMARY.md  QUICK_START.md  capture-errors.js  index.html  instrumentation.ts  next.config.js  nginx.conf  package-lock.json  package.json  playwright.config.ts  problematic.md  tailwind.config.js  test-imports.js  tsconfig.tsbuildinfo
frontend/.claude/: settings.local.json
frontend/app/: globals.css  layout.tsx
frontend/app/api/chat/: route.ts
frontend/app/api/chat-unified/: route.ts
frontend/app/api/chat-v2/: route.ts
frontend/app/api/prompt-enhancer/: route.ts
frontend/app/walkthrough/: page.tsx
frontend/components/: IDE.tsx  PyodideLoader.tsx
frontend/components/AI/: AIAssistant.tsx  DiffViewer.tsx
frontend/components/Console/: Console.tsx
frontend/components/Editor/: CodeEditor.tsx  EditorTabs.tsx
frontend/components/Execution/: MethodExecutor.tsx  PromptEditorModal.tsx
frontend/components/FileExplorer/: FileExplorer.tsx
frontend/components/Git/: GitPanel.tsx
frontend/components/LeftSidebar/: LeftSidebarContent.tsx
frontend/components/Preview/: PreviewPanel.tsx
frontend/components/ProjectSelector/: ProjectSelector.tsx
frontend/components/RightPanel/: AgenticChat.tsx  AgenticChatStreaming.tsx  AgenticChatUnified.tsx  AgenticChatV2.tsx  ChatMessage.tsx  DAppGenerator.tsx  DAppManualControls.tsx  RightPanel.tsx
frontend/components/Toolbar/: Toolbar.tsx
frontend/components/Walkthrough/: Walkthrough.tsx  steps.ts
frontend/components/ai-elements/: message.tsx  plan-progress.tsx  tool.tsx
frontend/dapp/lib/: nanocontracts.ts
frontend/hooks/: usePromptEnhancer.ts
frontend/lib/: ai-tools-client.ts  api.ts  beam-client.ts  git-service.ts  git.ts  hathor-modules-optimized.ts  hathor-modules.ts  mock-loader.ts  pyodide-runner.ts  storage.ts
frontend/lib/mocks/: cryptography.ts  on-chain-blueprint.ts  pycoin.ts  reactor.ts  rng.ts  rocksdb.ts  settings.ts  transaction-storage.ts  twisted.ts  utils.ts  version.ts  zope.ts
frontend/lib/server/: ai-config.ts
frontend/lib/services/: beam-service.ts
frontend/lib/state/: files.ts
frontend/lib/sync/: manifest-utils.ts  manifest.ts
frontend/lib/tools/: beam.ts  blueprints.ts  cache.ts  contract-metadata.ts  error-recovery.ts  files.ts  index.ts  middleware.ts  progress.ts  sync.ts  types.ts  validation.ts
frontend/lib/tools/files/: batch.ts  blueprint-publish.ts  dependencies.ts  index.ts  integration.ts  list.ts  read.ts  sync-helpers.ts  write.ts
frontend/prompts/: blueprint-specialist.md  dapp-integration-guide.md
frontend/public/hathor-modules/: index.json
frontend/public/hathor-modules/conf/: mainnet.yml
frontend/scripts/: README.md  compress-hathor-modules.js  download-hathor-modules.js  update-modules-list.js
frontend/store/: ide-store.ts  sample-projects.ts
frontend/test-results/: .last-run.json
frontend/test-results/ide-Nano-Contracts-IDE-loa-a0d6b-ntracts-and-toolbar-buttons/: error-context.md
frontend/tests/: cache.test.ts  ide.spec.ts  manifest.test.ts  middleware.test.ts  validation.test.ts
frontend/types/: git.d.ts
frontend/utils/: contractParser.ts  hathorHelpers.ts  hathorTestMocks.ts  promptGenerator.ts  testParser.ts
shared/examples/: betting_game.py  multi_user_token.py  token_vault.py
(+20 files in other folders)
