[tool.poetry]
name = "nano-contracts-ide-backend"
version = "1.0.0"
description = "AI-powered backend for Hathor Nano Contracts IDE"
authors = ["Hathor Team <dev@hathor.network>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
# Core web framework
fastapi = ">=0.104.1"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
python-multipart = ">=0.0.6"

# Configuration and logging
python-dotenv = ">=1.0.0"
structlog = ">=22.3.0"

# Data validation
pydantic = ">=2.0.0"

# AI integration (multi-provider support)
pydantic-ai = ">=0.0.14"
openai = ">=1.3.8"
google-generativeai = ">=0.8.0"

# Rate limiting and caching
redis = ">=5.0.0"
slowapi = ">=0.1.9"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = ">=7.4.3"
pytest-asyncio = ">=0.21.1"

# Code formatting and linting
black = ">=23.0.0"
isort = ">=5.12.0"
flake8 = ">=6.0.0"
mypy = ">=1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
python_files = [
    "test_*.py",
    "*_test.py",
]
asyncio_mode = "auto"
